@@ -3,6 +3,7 @@ OpenLDAP 2.1 Change Log
 OpenLDAP 2.1.20 Engineering
 	Fixed slapd regex lookup mutex issue (ITS#2505)
 	Fixed back-bdb/ldbm filter indexing bugs (ITS#2506) (ITS#2507)
+	Fixed libldap ldap_get_attribute_ber bug
 
 OpenLDAP 2.1.19 Release
 	Fixed slapd substring index normalization (ITS#2468)
